# golem-client

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
.ci/: rebuild-docs.sh
.github/workflows/: release.yml  rust.yml
actix-wamp/: Cargo.toml  README.md  release.toml
actix-wamp/src/: args.rs  auth.rs  connection.rs  error.rs  lib.rs  messages.rs  pubsub.rs  transport.rs
actix-wamp/src/auth/: wampcra.rs
golem-model/: Cargo.toml
golem-model/src/: lib.rs  props.rs
golem-rpc-api/: Cargo.toml  README.md
golem-rpc-api/src/: apps.rs  comp.rs  concent.rs  core.rs  lib.rs  net.rs  pay.rs  res.rs  rpc.rs  serde.rs  settings.rs  setup.rs  terms.rs
golem-rpc-api/src/apps/: blender.rs  glambda.rs  wasm.rs
golem-rpc-api/tests/: test-subtasks-list.json  test_subtasks.rs
golem-rpc-macros/: Cargo.toml  README.md
golem-rpc-macros/src/: lib.rs  settings.rs
golemcli/: Cargo.toml  README.md  release.toml
golemcli/src/: account.rs  commands.rs  component_response.rs  context.rs  data_dir.rs  eth.rs  formaters.rs  interactive.rs  main.rs  network.rs  rpc.rs  terms.rs  utils.rs  version.rs
golemcli/src/commands/: account.rs  acl.rs  cache.rs  concent.rs  debug.rs  deposit_payments.rs  envs.rs  incomes.rs  network.rs  payments.rs  res.rs  resources.rs  settings.rs  status.rs  subtasks.rs  tasks.rs  terms.rs  test_task.rs  wallet.rs
golemcli/src/interactive/: cmdparse.rs  complete.rs
install/: check-golem.ps1  golemcli-update.ps1  golemcli-update.sh
latest/: aliases.js  search-index.js  settings.html  source-files.js
latest/actix_wamp/: all.html  enum.Error.html  enum.ErrorKind.html  fn.challenge_response_auth.html  fn.wss.html  index.html  sidebar-items.js  struct.RpcCallRequest.html  struct.RpcCallResponse.html  struct.SessionBuilder.html  trait.AuthMethod.html  trait.RpcEndpoint.html  trait.ToArgs.html
latest/actix_wamp/args/: struct.RpcCallRequest.html  struct.RpcCallResponse.html  trait.RpcEndpoint.html  trait.ToArgs.html
latest/actix_wamp/auth/: trait.AuthMethod.html
latest/actix_wamp/auth/wampcra/: fn.challenge_response_auth.html
latest/actix_wamp/error/: enum.Error.html
latest/actix_wamp/messages/: enum.ErrorKind.html
latest/actix_wamp/transport/: fn.wss.html
latest/golem_rpc_api/: all.html  enum.Error.html  enum.Net.html  fn.connect_to_app.html  index.html  macro.rpc_interface!.html  macro.rpc_interface.html  sidebar-items.js  type.Map.html
latest/golem_rpc_api/apps/: enum.ComputeOn.html  index.html  sidebar-items.js  struct.TaskDef.html  trait.TaskDefOptions.html
latest/golem_rpc_api/apps/blender/: fn.template.html  index.html  sidebar-items.js  struct.BlenderTaskOptions.html  type.BlenderTaskDef.html
latest/golem_rpc_api/apps/glambda/: enum.GLambdaVerificationType.html  fn.template.html  index.html  sidebar-items.js  struct.GLambdaOptions.html  struct.GLambdaVerification.html
latest/golem_rpc_api/apps/wasm/: fn.template.html  index.html  sidebar-items.js  struct.SubtaskDef.html  struct.WasmOptions.html  type.WasmTaskDef.html
latest/golem_rpc_api/comp/: enum.SubtaskStatus.html  enum.TaskStatus.html  enum.TaskTestStatus.html  index.html  sidebar-items.js  struct.CompEnvStatus.html  struct.GolemComp.html  struct.ProviderState.html  struct.StatsCounters.html  struct.SubtaskInfo.html  struct.SubtaskStats.html  struct.SubtasksInfo.html  struct.TaskInfo.html  struct.TaskTestResult.html  struct.UnsupportInfo.html  trait.AsGolemComp.html
latest/golem_rpc_api/concent/: index.html  sidebar-items.js  struct.GolemConcent.html  trait.AsGolemConcent.html
latest/golem_rpc_api/core/: enum.Stage.html  index.html  sidebar-items.js  struct.ComponentReport.html  struct.GolemCore.html  struct.ServerStatus.html  trait.AsGolemCore.html
latest/golem_rpc_api/net/: enum.AclRule.html  index.html  sidebar-items.js  struct.AclRuleItem.html  struct.AclStatus.html  struct.GolemNet.html  struct.NetStatus.html  struct.NodeInfo.html  struct.PeerInfo.html  trait.AsGolemNet.html
latest/golem_rpc_api/pay/: enum.DepositStatus.html  enum.PaymentStatus.html  index.html  sidebar-items.js  struct.Balance.html  struct.DepositBalance.html  struct.DepositPayment.html  struct.GolemPay.html  struct.Income.html  struct.Payment.html  trait.AsGolemPay.html
latest/golem_rpc_api/res/: enum.DirType.html  index.html  sidebar-items.js  struct.CachePaths.html  struct.CacheSizes.html  struct.GolemRes.html  struct.HwCaps.html  struct.HwPreset.html  trait.AsGolemRes.html
latest/golem_rpc_api/rpc/: index.html  sidebar-items.js  struct.Invoker.html  trait.AsInvoker.html  trait.Future.html
latest/golem_rpc_api/rpc/future/: enum.Either.html  enum.ExecuteErrorKind.html  enum.Loop.html  fn.collect.html  fn.done.html  fn.empty.html  fn.failed.html  fn.lazy.html  fn.loop_fn.html  fn.ok.html  fn.poll_fn.html  fn.select_all.html  fn.select_ok.html  index.html  sidebar-items.js  struct.AndThen.html  struct.CatchUnwind.html  struct.Empty.html  struct.ExecuteError.html  (+31 more)
latest/golem_rpc_api/settings/: constant.NAMES.html  fn.from_name.html  index.html  sidebar-items.js  trait.DynamicSetting.html  trait.Setting.html
latest/golem_rpc_api/setup/: enum.Net.html  fn.connect_to_app.html
latest/golem_rpc_api/terms/: index.html  sidebar-items.js  struct.GolemTerms.html  trait.AsGolemTerms.html
latest/golemcli/: all.html  index.html
latest/implementors/actix_wamp/: trait.RpcEndpoint.js
latest/implementors/failure/: trait.Fail.js
latest/src/actix_wamp/: args.rs.html  auth.rs.html  connection.rs.html  error.rs.html  lib.rs.html  messages.rs.html  transport.rs.html
latest/src/golem_rpc_api/: apps.rs.html  comp.rs.html  concent.rs.html  core.rs.html  lib.rs.html  net.rs.html  pay.rs.html  res.rs.html  rpc.rs.html  serde.rs.html  settings.rs.html  setup.rs.html  terms.rs.html
latest/src/golemcli/: commands.rs.html  context.rs.html  eth.rs.html  interactive.rs.html  main.rs.html
latest/src/wamp_derive/: lib.rs.html
latest/wamp_derive/: all.html  attr.wamp.html  attr.wamp_interface.html  index.html  sidebar-items.js
wamp-derive/: Cargo.toml
wamp-derive/src/: lib.rs
(+79 files in other folders)
