[workspace]
members= [
    'golem-rpc-api',
    'golem-rpc-macros',
    'golemcli',
    'actix-wamp'
]

[profile.release]
codegen-units = 1
lto=true
opt-level=3
panic="abort"

[patch.crates-io]
rand_core={git = "https://github.com/rust-random/rand.git", branch="0.5"}
rand={git = "https://github.com/rust-random/rand.git", branch="0.5"}

