[workspace]
members = [
    "actix-wamp",
    "golem-rpc-api",
    "golem-rpc-macros",
    "golemcli",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"

[patch.crates-io]
actix-wamp = { path = "actix-wamp" }
golem-rpc-api = { path = "golem-rpc-api" }
golem-rpc-macros = { path = "golem-rpc-macros" }
