[package]
name = "actix-wamp"
version = "0.1.0"
authors = ["Przemysław K. Rekucki <przemyslaw.rekucki@golem.network>"]
edition = "2018"

[features]
default=["crypto-mac/std"]

[dependencies]
actix = "0.8.1"
actix-http = { version = "0.2.0", features=["fail"] }
failure="0.1"
log = "0.4.6"
rmp-serde = "0.13.7"
rmp = "0.8.7"

futures="0.1"
hmac = "0.7.0"
sha2 = "0.8.0"
crypto-mac={version="0.7", features=["std"]}
serde_json = "1.0.39"
serde="1.0"
serde_derive="1.0"
base64 = "0.10.1"
rand = "0.6"

[dependencies.actix-web]
version = "1.0.0-beta.5"
features = ['ssl']

[dependencies.openssl]
version="0.10.20"

[dependencies.rmpv]
version="0.4"
features=["with-serde"]



