[package]
name = "golem-model"
version = "0.1.0"
authors = ["Przemysław K. Rekucki <przemyslaw.rekucki@golem.network>"]
edition = "2018"

[dependencies]
failure = "0.1.5"

[dependencies.rust_decimal]
version = "1.0.1"
features=["serde"]

[dependencies.chrono]
version = "0.4.6"
features=["serde"]

[dependencies.semver]
version = "0.9.0"
features=["serde"]