[package]
name = "golem-rpc-api"
version = "0.1.0"
description = "Typesafe binding for Brass Golem RPC services"
keywords = ["Golem", "Brass", "RPC", "API"]
authors = ["Przemysław K. Rekucki <przemyslaw.rekucki@golem.network>"]
homepage = "https://github.com/golemfactory/golem-client/tree/master/golem-rpc-api"
repository = "https://github.com/golemfactory/golem-client.git"
documentation = "https://docs.rs/golem-rpc-api"
license = "GPL-3.0"
edition = "2018"

[badges]
travis-ci = { repository = "golemfactory/golem-client", branch = "master" }

[dependencies]
serde = { version = "~1.0.80", features=["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
futures="0.1"
log="0.4"
failure="0.1"

bigdecimal = {version = "0.1.0", features=["serde"]}
chrono = {version = "0.4.6", features=["serde"]}

[dependencies.actix-wamp]
path="../actix-wamp"

[dependencies.tokio-timer]
version = "0.2.11"

[dependencies.golem-rpc-macros]
path="../golem-rpc-macros"

[dependencies.num-traits]
version = "0.2"

[dependencies.openssl]
version="0.10.20"

[features]
default=["settings"]
settings=[]

[dev-dependencies]
rand="0.5"

