[package]
name = "golem-rpc-macros"
version = "0.1.0"
authors = ["Przemysław K. Rekucki <przemyslaw.rekucki@golem.network>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15"}
quote = "0.6"
heck = "0.3.1"
failure="0.1"
regex = "1"
lazy_static="1.3"
proc-macro2 = "0.4"