[package]
name = "golemcli"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[features]
default=["concent_cli", "debug_cli"]
concent_cli=[]
debug_cli=[]
test_task_cli=[]

[dependencies]
actix = "0.8.1"
actix-http = "0.1.4"

failure="0.1"
flexi_logger = "0.11.4"
rmp-serde = "0.13.7"
rmp = "0.8.7"
rmpv = "0.4.0"
futures="0.1"
hmac = "0.7.0"
sha2 = "0.8.0"
serde_json = "1.0.39"
serde="1.0"
serde_derive="1.0"
base64 = "0.10.1"
rand = "0.6.5"
appdirs="0.2"
structopt="0.2.15"
log="0.4"
rpassword = "3.0.2"
bigdecimal = {version = "0.1.0", features=["serde"]}

[dependencies.actix-web]
version = "1.0.0-beta.2"
default-features=false
features = ['ssl', 'client']

[dependencies.openssl]
version="0.10.20"
features=['vendored']

[dependencies.actix-wamp]
path="../actix-wamp"

[dependencies.golem-rpc-api]
path="../golem-rpc-api"