[package]
name = "golemcli"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[features]
default=['interactive_cli', 'debug_cli', 'concent_cli', 'test_task_cli']
concent_cli=[]
debug_cli=[]
interactive_cli=["rustyline", "atty", "ansi_term"]
test_task_cli=[]

[dependencies]
actix = "0.8.1"
actix-http = "0.2"
appdirs="0.2"
base64 = "0.10.1"
bigdecimal = {version = "0.1.0", features=["serde"]}
crossbeam-channel = "0.3.8"
ethkey = "0.2.5"
failure="0.1"
flexi_logger = "0.11.4"
futures-cpupool="0.1"
futures="0.1"
hmac = "0.7.0"
humantime = "1.2.0"
lazy_static="1.1"
log="0.4"
prettytable-rs = "0.8"
promptly = "0.1.5"
rand = "0.6.5"
rmp = "0.8.7"
rmp-serde = "0.13.7"
rmpv = "0.4.0"
rpassword = "3.0.2"
rustc-hex = "2.0"
serde="1.0"
serde_derive="1.0"
serde_json = "1.0.39"
serde_yaml = "0.8"
sha2 = "0.8.0"
structopt="0.2.15"

# Needed for terams show
html2text = "0.1.8"

[dependencies.actix-web]
version = "1.0.0-beta.5"
default-features=false
features = ['ssl', 'client']

[dependencies.openssl]
version="0.10.20"
features=['vendored']

[dependencies.actix-wamp]
path="../actix-wamp"

[dependencies.golem-rpc-api]
path="../golem-rpc-api"
features=['settings']

[dependencies.rustyline]
version="4.0.0"
optional=true

[dependencies.atty]
version = "0.2.2"
optional=true

[target."cfg(not(windows))".dependencies.ansi_term]
version = "0.11"
optional = true
